<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Love Live!</string>
    <string name="bootup_stopped">我们检测到一个无效的访问。您无法启动应用程序。</string>
    <string name="dlg_activeclose_cancel">确认</string>
    <string name="dlg_activeclose_ok">取消</string>
    <string name="dlg_activeclose_text">是否确认退出激活流程并且重新登录</string>
    <string name="dlg_autologin_cancel">重试</string>
    <string name="dlg_autologin_ok">其他登录方式</string>
    <string name="dlg_autologin_text">尝试链接服务器超时，请稍后重试。</string>
    <string name="dlg_bindphonerebind">变更关联</string>
    <string name="dlg_bindphonerebindphone">变更关联手机</string>
    <string name="dlg_binphoneclose_cancel">确认</string>
    <string name="dlg_binphoneclose_ok">取消</string>
    <string name="dlg_binphoneclose_text">是否确认退出绑定手机流程并且重新登录</string>
    <string name="dlg_error_ok">确定</string>
    <string name="dlg_fillrealinfo_content">我们已于2019年11月1日起正式启动网络游戏防沉迷系统。根据国家新闻出版署相关要求，同时也为保护您的合法权益，请您配合进行实名注册。 针对未成年人的防沉迷措施，详情请见国家新闻出版署《关于防止未成年人沉迷网络游戏的通知》。 您的资料只用于游戏实名认证及防沉迷信息，不用做他途，请放心填写。</string>
    <string name="dlg_fillrealinfoclose_cancel">确认</string>
    <string name="dlg_fillrealinfoclose_ok">取消</string>
    <string name="dlg_fillrealinfoclose_text">是否确认退出实名认证并且重新登录</string>
    <string name="dlg_fk_ok">确定</string>
    <string name="dlg_fk_text">为了您的账号安全，请使用短信登录</string>
    <string name="dlg_guestupgrade_cancel">重试</string>
    <string name="dlg_guestupgrade_ok">取消</string>
    <string name="dlg_guestupgrade_text">尝试链接服务器超时，请稍后重试。</string>
    <string name="dlg_guestuploginclose_cancel">确认退出</string>
    <string name="dlg_guestuploginclose_ok">取消</string>
    <string name="dlg_guestuploginclose_text">是否确认退出升级</string>
    <string name="dlg_loginclose_cancel">确认退出</string>
    <string name="dlg_loginclose_ok">取消</string>
    <string name="dlg_loginclose_text">是否确认退出登录</string>
    <string name="gl_account_login">账号登录</string>
    <string name="gl_account_nick_name">此账号备注名:%1s</string>
    <string name="gl_active_tip">请输入激活码</string>
    <string name="gl_advice_upgrade">当前为游客账号，为了您游戏便捷及账号安全，请尽快绑定为正式游戏账号。</string>
    <string name="gl_agreement">我同意《服务协议》及《隐私政策》</string>
    <string name="gl_agreement_all">服务协议与隐私政策</string>
    <string name="gl_agreement_privacy">隐私政策</string>
    <string name="gl_agreement_retry">网络请求超时，请重试</string>
    <string name="gl_agreement_service">服务协议</string>
    <string name="gl_agreement_title">用户服务协议</string>
    <string name="gl_authorized_login">授权登录</string>
    <string name="gl_bind">关联</string>
    <string name="gl_bind_account">立即绑定</string>
    <string name="gl_bind_action_tip">亲爱的用户，为了给您更好的服务，请关联一个手机号</string>
    <string name="gl_bind_later">暂不关联></string>
    <string name="gl_bind_phone">关联手机</string>
    <string name="gl_bind_succ">恭喜您，账号绑定成功!</string>
    <string name="gl_binded_phone">已关联手机</string>
    <string name="gl_button_agree">同意</string>
    <string name="gl_button_disagree">不同意</string>
    <string name="gl_check">同意/立即勾选</string>
    <string name="gl_choose_account">请选择您要登录的账号</string>
    <string name="gl_confirm">我知道了</string>
    <string name="gl_confirm_str">确定</string>
    <string name="gl_daoyu_login">叨鱼登录</string>
    <string name="gl_dele_acct">账号注销</string>
    <string name="gl_dele_acct_agreement">盛趣游戏通行证账号注销协议</string>
    <string name="gl_dele_acct_bt_check_txt">请完整阅读并确认本页内容</string>
    <string name="gl_dele_acct_bt_complete">完成</string>
    <string name="gl_dele_acct_bt_next">下一步</string>
    <string name="gl_dele_acct_cancel">取消账号注销</string>
    <string name="gl_dele_acct_checktxt1">我已满足以上所有条件</string>
    <string name="gl_dele_acct_checktxt2">我已仔细阅读、充分理解并同意《盛趣游戏通行证账号注销协议》全部条款</string>
    <string name="gl_dele_acct_close_confirm">是否确认退出注销账号</string>
    <string name="gl_dele_acct_complete">已提交账号注销申请</string>
    <string name="gl_dele_acct_condition">盛趣游戏通行证账号注销条件</string>
    <string name="gl_dele_acct_confirm">我接受犹豫期</string>
    <string name="gl_dele_acct_fill_real">为了账号安全，请验证本账号实名认证信息</string>
    <string name="gl_dele_acct_hesitate">盛趣游戏通行证账号注销犹豫期</string>
    <string name="gl_dele_acct_send_sms">为了账号安全，请验证账号信息</string>
    <string name="gl_dele_acct_tips1">"尊敬的用户，您好！ 
\u0009为保障您的账号安全和相关权益，请您先检查并确保和承诺您申请注销的盛趣游戏通行证账号已经同时满足以下条件，这些条件包括但不限于： 
\u00091、该通行证账号为您本人合法拥有并登录使用，且符合用户协议及相关说明规则中有关账号的规定； 
\u00092、该通行证账号无任何安全风险，包括但不限于：（1）在申请注销期间无未处理完毕的（被）投诉、举报、调查、仲裁、诉讼等；（2）在申请注销期间未处于非法的被检查、被调查、被限制的状态；（3）盛趣游戏认为可能存在安全风险的其他情况。 
\u00093、该通行证账号中的相关游戏收益已结清或得到妥善处理：包括但不限于点券、专用币、游戏时长、钻石、金币、体验卡、会员权益及其他游戏收益等。请您妥善处理您的游戏收益，若注销时未处理，视为您自愿放弃该等游戏收益； 
\u00094、该通行证账号无处于未完成状态订单：包括但不限于基于该账号产生的有关游戏虚拟道具、周边商品等的订单； 
\u00095、该游戏账号无任何纠纷：包括投诉举报、被投诉举报、国家机关调查、仲裁、诉讼等纠纷；"</string>
    <string name="gl_dele_acct_tips2">"尊敬的用户，您好！ 
\u0009在您正式开始下一步盛趣游戏通行证账号注销流程前，我们特意为您作出如下重要提示： 
\u0009注销盛趣游戏通行证账号是不可恢复的操作，您再次使用该账号登录和使用盛趣游戏的内容及服务时，将视为新账号，您无法找回您通过该账号添加或绑定的任何权益和信息； 
\u0009注销盛趣游戏通行证账号后，除法律法规或本协议另有规定外，您在盛趣游戏通行证账号下，以及您曾使用过的，所有由盛趣游戏提供的内容和服务中的个人信息，将进行删除或匿名化处理，且此前已关联该通行证账号的所有产品与服务将不再关联； 
\u0009注销盛趣游戏通行证账号后，该通行证账号下您曾经使用过的所有(一款或多款)游戏内容中的虚拟道具及其他游戏增值服务（为描述方便，以下统称“游戏收益”）也将会被删除。据此，也特别提示您，在您注销盛趣游戏通行证账号前请您妥善处理您的游戏收益或相关的游戏收益已结清。一旦您注销通行证账号，如该账号下还存在游戏收益的（包括在游戏使用期间已产生的但尚未失效或未使用的游戏虚拟道具及其他游戏增值服务，及未来可能产生的游戏收益），视为您自愿放弃该游戏收益，且我们有权对该账号下的全部游戏收益做清除处理，因此产生的后果由您自行承担，您同意不会要求我们恢复或赔偿该游戏收益。 
\u0009为了避免更您带来不便，请您在注销盛趣游戏通行证账号之前慎重考虑，如您经慎重考虑后仍然决定要注销此盛趣游戏通行证账号，请您务必先行仔细阅读并充分理解本《盛趣游戏通行证账号注销协议》的全部内容并谨慎操作。"</string>
    <string name="gl_dele_acct_tips3">"为了充分保障您的权益，我们为您提供时间占位符天的保留期（下称“犹豫期”）。 
在犹豫期内，该账号下的相关内容暂时不会做删除或匿名化处理，但该账号将处于冻结状态，您将无法以该账号登录和使用盛趣游戏的服务及内容。在此期间，您可以通过联系客服或登录游戏并按提示操作来取消注销申请。取消成功后，如您需再次注销该账号，您需要根据本协议之约定重新进入注销流程并进行相关操作。 
如您在犹豫期内未申请取消注销，也未出现任何不得注销的事由，在犹豫期满后，该账号将被注销，账号下任何权益和信息将无法恢复。"</string>
    <string name="gl_dele_acct_tips4">"您的账号已于时间占位符 成功提交注销申请，进入天数占位符天犹豫期，在此期间可以通过联系客服申请，或登录游戏并按提示操作取消注销申请。 
如您未在犹豫期内申请取消注销，也未出现任何不得注销的事由，在犹豫期届满后，该账号将被注销。"</string>
    <string name="gl_delete">删除</string>
    <string name="gl_dialog_can_scroll_text">可滚动的长文字</string>
    <string name="gl_dialog_close">关闭</string>
    <string name="gl_dialog_go_download">前往下载</string>
    <string name="gl_dialog_tip_account_des">此账号备注名:</string>
    <string name="gl_dialog_tip_remeaccount">请牢记您的登录账号:</string>
    <string name="gl_dlg_pic_des">图片</string>
    <string name="gl_enter_game">进入游戏</string>
    <string name="gl_fillrealname">实名认证</string>
    <string name="gl_forget_pwd">忘记密码</string>
    <string name="gl_g_loading_text">G力加载中，请稍候...</string>
    <string name="gl_get_ver_code">获取验证码</string>
    <string name="gl_go_setting">设置</string>
    <string name="gl_hot_regions">常用</string>
    <string name="gl_id_card">身份证</string>
    <string name="gl_input_idcard_num">请输入有效的身份证号码</string>
    <string name="gl_input_name">请输入您的真实姓名</string>
    <string name="gl_input_phone">请输入手机号码</string>
    <string name="gl_input_pic_ver_code">请输入图形验证码</string>
    <string name="gl_input_pic_ver_code_title">请输入下面的图形验证码</string>
    <string name="gl_input_psd">请输入密码</string>
    <string name="gl_input_sms_code">请输入短信验证码</string>
    <string name="gl_later_action">跳过</string>
    <string name="gl_list_taiwan">台湾</string>
    <string name="gl_login_other_account">其他账号登录</string>
    <string name="gl_name">姓名</string>
    <string name="gl_no_code_receive">收不到验证码？</string>
    <string name="gl_page_back_des">返回</string>
    <string name="gl_phone_country_title">手机号归属地</string>
    <string name="gl_phone_login">手机号登录</string>
    <string name="gl_pwd_login">密码登录</string>
    <string name="gl_read_agreement">本游戏为了给玩家提供更好的服务，请先阅读并同意:</string>
    <string name="gl_refuse">残忍拒绝</string>
    <string name="gl_remember_account">请牢记您的登录账号: %1s</string>
    <string name="gl_reread_privacy_text">您已拒绝隐私政策，本游戏将无法继续为您提供服务，请点击重试再次显示隐私政策，或点击取消退出游戏。</string>
    <string name="gl_reset_pwd">重置密码</string>
    <string name="gl_screen_shot_save">建议您截图保存当前页面</string>
    <string name="gl_set_nick_name">您输入的账号目前已有角色，我们会为您的手机号:%1s下关联一个子账号，您可以为这个子账号进行备注，以供自己辨识。</string>
    <string name="gl_set_pwd">设置密码</string>
    <string name="gl_sms_login_text">短信登录</string>
    <string name="gl_time_hide_tip">7日内不再提示</string>
    <string name="gl_tip_no_need_bind">亲爱的用户，您是手机账号登录，无需关联手机</string>
    <string name="gl_upgrade_succ">恭喜您，已成功升级!</string>
    <string name="gl_visitor_update">游客升级</string>
    <string name="gl_voice_call_tips">如果您收不到短信验证码，请您尝试接听来自:021-50504740语音电话并获取验证码。</string>
    <string name="gl_voice_get_code">获取语音验证码</string>
    <string name="gl_voice_tele">021-50504740语音电话并获取验证码。</string>
    <string name="gt3_geetest_analyzing">Analysing...</string>
    <string name="gt3_geetest_checking">Intelligent Verification</string>
    <string name="gt3_geetest_click">Please click captcha button</string>
    <string name="gt3_geetest_closed">Closed</string>
    <string name="gt3_geetest_http_error">Network Faliure</string>
    <string name="gt3_geetest_http_timeout">Network Timeout</string>
    <string name="gt3_geetest_pass">Success</string>
    <string name="gt3_geetest_please_verify">Please complete verification</string>
    <string name="gt3_geetest_success">Success</string>
    <string name="gt3_geetest_support">Geetest provides technical support</string>
    <string name="gt3_geetest_try_again">Click Retry</string>
    <string name="gt3_request_data_error">request data error</string>
    <string name="gt3_request_net_erroe">request net error</string>
    <string name="install_dialog_message">请稍候片刻...</string>
    <string name="install_dialog_title">正在准备启动应用</string>
    <string name="klb_extensions">extension.ShengQu.GHomeExtension,extension.ShengQu.PermissionCheck</string>
    <string name="notification_channel_id">LoveliveLPMax</string>
    <string name="notification_channel_name">LP全回复</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>