<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/gl_bg_pop" android:layout_width="292.0dip" android:layout_height="@dimen/gl_new_dialog_portrait_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_close" android:layout_width="35.0dip" android:layout_height="35.0dip" android:src="@drawable/gl_close32" android:scaleType="center" android:layout_alignParentRight="true" android:contentDescription="@string/gl_dialog_close" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:text="@string/gl_dele_acct" android:layout_centerHorizontal="true" style="?gl_title_main" />
    <TextView android:id="@id/tv_delete_tiptitle" android:layout_width="242.0dip" android:layout_height="wrap_content" android:layout_marginTop="64.0dip" android:text="@string/gl_dele_acct_fill_real" android:layout_centerHorizontal="true" android:lineSpacingExtra="2.0dip" style="?gl_title_main" />
    <RelativeLayout android:id="@id/view_fill_real_name" android:background="@drawable/gl_input" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginTop="15.0dip" android:maxLines="1" android:layout_below="@id/tv_delete_tiptitle" android:layout_centerHorizontal="true">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/gl_name" android:layout_centerVertical="true" style="?gl_input_txt" />
        <EditText android:id="@id/et_fill_real_name" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:hint="@string/gl_input_name" android:maxLines="1" android:maxLength="32" android:layout_centerVertical="true" android:inputType="text" android:textCursorDrawable="@drawable/gl_cursor_color" style="?gl_input_txt" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/view_fill_id" android:background="@drawable/gl_input" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/view_fill_real_name" android:layout_centerHorizontal="true">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/gl_id_card" android:layout_centerVertical="true" style="?gl_input_txt" />
        <EditText android:id="@id/et_fill_id" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/gl_input_idcard_num" android:maxLines="1" android:maxLength="18" android:digits="0123456789xX" android:layout_centerVertical="true" android:textCursorDrawable="@drawable/gl_cursor_color" android:layout_marginStart="60.0dip" style="?gl_input_txt" />
    </RelativeLayout>
    <TextView android:gravity="center" android:id="@id/tv_next_step" android:background="@drawable/gl_selector_bt_main" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="11.0dip" android:text="@string/gl_dele_acct_bt_next" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="?gl_bt_main" />
</RelativeLayout>