<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/gl_bg_main" android:layout_width="292.0dip" android:layout_height="304.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_back" android:layout_width="42.0dip" android:layout_height="42.0dip" android:src="@drawable/gl_back_main" android:scaleType="center" android:contentDescription="@string/gl_page_back_des" />
    <ImageView android:id="@id/iv_close" android:layout_width="42.0dip" android:layout_height="42.0dip" android:src="@drawable/gl_close32" android:scaleType="center" android:layout_alignParentRight="true" android:contentDescription="@string/gl_dialog_close" />
    <LinearLayout android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:layout_centerHorizontal="true">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gl_fillrealname" style="?gl_title_main" />
        <ImageView android:id="@id/iv_fill_name_toast" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:src="@drawable/gl_tips" />
    </LinearLayout>
    <ScrollView android:id="@id/tv_real_name_describe" android:layout_width="242.0dip" android:layout_height="80.0dip" android:layout_marginTop="64.0dip" android:layout_centerHorizontal="true">
        <TextView android:id="@id/tv_real_tip" android:layout_width="242.0dip" android:layout_height="80.0dip" android:text="@string/dlg_fillrealinfo_content" android:lineSpacingExtra="2.0dip" style="?gl_body_txt1" />
    </ScrollView>
    <RelativeLayout android:id="@id/view_fill_real_name" android:background="@drawable/gl_input" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginTop="8.0dip" android:maxLines="1" android:layout_below="@id/tv_real_name_describe" android:layout_centerHorizontal="true">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/gl_name" android:layout_centerVertical="true" style="?gl_input_txt" />
        <EditText android:id="@id/et_fill_real_name" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:hint="@string/gl_input_name" android:maxLines="1" android:maxLength="32" android:layout_centerVertical="true" android:inputType="text" android:textCursorDrawable="@drawable/gl_cursor_color" style="?gl_input_txt" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/view_fill_id" android:background="@drawable/gl_input" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginTop="10.0dip" android:layout_below="@id/view_fill_real_name" android:layout_centerHorizontal="true">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/gl_id_card" android:layout_centerVertical="true" style="?gl_input_txt" />
        <EditText android:id="@id/et_fill_id" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:hint="@string/gl_input_idcard_num" android:maxLines="1" android:maxLength="18" android:digits="0123456789xX" android:layout_centerVertical="true" android:textCursorDrawable="@drawable/gl_cursor_color" style="?gl_input_txt" />
    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="20.0dip" android:layout_alignParentBottom="true">
        <TextView android:gravity="center" android:id="@id/tv_confirm_real_name" android:background="@drawable/gl_selector_bt_main" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/gl_confirm_str" android:layout_weight="1.0" android:layout_centerHorizontal="true" style="?gl_bt_main" />
        <TextView android:gravity="center" android:id="@id/tv_cancel_real_name" android:background="@drawable/gl_selector_bt_assistant" android:layout_width="0.0dip" android:layout_height="38.0dip" android:layout_marginLeft="20.0dip" android:text="@string/gl_later_action" android:layout_weight="1.0" android:layout_centerHorizontal="true" style="?gl_bt_assistant" />
    </LinearLayout>
</RelativeLayout>
