<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/gl_bg_main" android:layout_width="292.0dip" android:layout_height="304.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_back" android:layout_width="42.0dip" android:layout_height="42.0dip" android:src="@drawable/gl_back_main" android:scaleType="center" android:contentDescription="@string/gl_page_back_des" />
    <ImageView android:id="@id/iv_close" android:layout_width="42.0dip" android:layout_height="42.0dip" android:src="@drawable/gl_close32" android:scaleType="center" android:layout_alignParentRight="true" android:contentDescription="@string/gl_dialog_close" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:text="@string/gl_sms_login_text" android:layout_centerHorizontal="true" style="?gl_title_main" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/view_input_phone_number" android:background="@drawable/gl_input" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginTop="69.0dip" android:layout_centerHorizontal="true">
        <LinearLayout android:id="@id/view_country_code" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@id/tv_country_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="+86" style="?gl_body_txt1" />
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:src="@drawable/gl_selector_arrow_down" />
        </LinearLayout>
        <EditText android:id="@id/et_input_phone" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:hint="@string/gl_input_phone" android:lines="1" android:maxLength="32" android:inputType="phone" android:imeOptions="actionDone" android:textCursorDrawable="@drawable/gl_cursor_color" style="?gl_input_txt" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/view_input_ver_code" android:background="@drawable/gl_input" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginTop="14.0dip" android:layout_below="@id/view_input_phone_number" android:layout_centerHorizontal="true">
        <EditText android:id="@id/et_sms_code" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/gl_input_sms_code" android:maxLines="1" android:maxLength="10" android:layout_weight="1.0" android:inputType="text" android:textCursorDrawable="@drawable/gl_cursor_color" style="?gl_input_txt" />
        <TextView android:id="@id/tv_get_sms_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/gl_get_ver_code" style="?gl_important_txt2" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/view_input_ver_code">
        <com.ghomesdk.gameplus.uikit.AgreementCheckBox android:layout_gravity="center_vertical" android:id="@id/cb_login_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/gl_selector_checkbox_agreement" android:contentDescription="@string/gl_agreement_service" />
        <TextView android:layout_gravity="center_vertical" android:id="@id/tv_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:text="@string/gl_agreement" android:layout_weight="1.0" style="?gl_body_txt2" />
        <TextView android:layout_gravity="center_vertical" android:id="@id/tv_get_voice_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gl_no_code_receive" style="?gl_body_txt1" />
    </LinearLayout>
    <TextView android:gravity="center" android:id="@id/tv_psd_login" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginBottom="11.0dip" android:text="@string/gl_pwd_login" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="?gl_body_txt1" />
    <TextView android:gravity="center" android:id="@id/tv_enter_game" android:background="@drawable/gl_selector_bt_main" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginBottom="11.0dip" android:text="@string/gl_enter_game" android:layout_above="@id/tv_psd_login" android:layout_centerHorizontal="true" style="?gl_bt_main" />
</RelativeLayout>
