<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/gl_bg_pop" android:layout_width="292.0dip" android:layout_height="wrap_content" android:minHeight="150.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_close" android:visibility="gone" android:layout_width="34.0dip" android:layout_height="34.0dip" android:src="@drawable/gl_close24" android:scaleType="center" android:layout_alignParentRight="true" android:contentDescription="@string/gl_dialog_close" />
    <LinearLayout android:orientation="vertical" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="center_horizontal" android:id="@id/tv_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:text="@string/gl_bind_succ" style="?gl_title_main" />
        <ScrollView android:id="@id/sv_des_0" android:layout_width="fill_parent" android:layout_height="80.0dip">
            <TextView android:id="@id/tv_dialog_des_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/gl_dialog_can_scroll_text" android:lineSpacingExtra="7.0dip" style="?gl_body_txt1" />
        </ScrollView>
        <TextView android:id="@id/tv_dialog_des_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/gl_dialog_tip_remeaccount" android:lineSpacingExtra="7.0dip" style="?gl_body_txt1" />
        <TextView android:id="@id/tv_dialog_des_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="24.0dip" android:text="@string/gl_dialog_tip_account_des" android:lineSpacingExtra="7.0dip" style="?gl_body_txt1" />
        <TextView android:id="@id/tv_dialog_remind" android:background="@drawable/gl_bt_forbidden" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="24.0dip" android:lineSpacingExtra="7.0dip" style="?gl_body_txt2" />
        <ImageView android:id="@id/iv_dialog_ad" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="14.0dip" android:layout_marginRight="24.0dip" android:src="@drawable/gl_ad_daoyu" android:contentDescription="@string/gl_dialog_go_download" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="38.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="24.0dip">
            <TextView android:gravity="center" android:id="@id/tv_dialog_confirm" android:background="@drawable/gl_selector_bt_main" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/gl_confirm" android:layout_weight="1.0" style="?gl_bt_main" />
            <View android:id="@id/view_dialog_cancel_placeholder" android:layout_width="19.0dip" android:layout_height="wrap_content" />
            <TextView android:gravity="center" android:id="@id/tv_dialog_cancel" android:background="@drawable/gl_selector_bt_assistant" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/dlg_binphoneclose_ok" android:layout_weight="1.0" style="?gl_bt_assistant" />
        </LinearLayout>
        <TextView android:layout_gravity="center_horizontal" android:id="@id/tv_dialog_advice" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/gl_screen_shot_save" style="?gl_body_txt2" />
    </LinearLayout>
</RelativeLayout>