<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/gl_bg_main" android:layout_width="292.0dip" android:layout_height="304.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_close" android:layout_width="42.0dip" android:layout_height="42.0dip" android:src="@drawable/gl_close32" android:scaleType="center" android:layout_alignParentRight="true" android:contentDescription="@string/gl_dialog_close" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="23.0dip" android:text="@string/dlg_bindphonerebindphone" android:layout_centerHorizontal="true" style="?gl_title_main" />
    <TextView android:textColor="@android:color/black" android:gravity="left" android:id="@id/tv_content" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginTop="63.0dip" android:layout_marginBottom="10.0dip" android:text="@string/gl_tip_no_need_bind" android:layout_centerHorizontal="true" style="?gl_bt_main" />
    <TextView android:gravity="center" android:id="@id/tv_rebind_phone" android:background="@drawable/gl_selector_bt_main" android:layout_width="242.0dip" android:layout_height="38.0dip" android:layout_marginBottom="22.0dip" android:text="@string/dlg_error_ok" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="?gl_bt_main" />
</RelativeLayout>