<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/gl_bg_pop" android:paddingBottom="15.0dip" android:layout_width="292.0dip" android:layout_height="150.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_close" android:visibility="gone" android:layout_width="34.0dip" android:layout_height="34.0dip" android:src="@drawable/gl_close24" android:scaleType="center" android:layout_alignParentRight="true" android:contentDescription="@string/gl_dialog_close" />
    <LinearLayout android:orientation="vertical" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ScrollView android:id="@id/sv_des_0" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="80.0dip">
            <TextView android:id="@id/tv_dialog_des_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/gl_dialog_can_scroll_text" android:lineSpacingExtra="7.0dip" style="?gl_body_txt1" />
        </ScrollView>
        <TextView android:id="@id/tv_dialog_des_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:text="@string/gl_dialog_tip_remeaccount" android:lineSpacingExtra="7.0dip" style="?gl_body_txt1" />
        <TextView android:id="@id/tv_dialog_des_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="24.0dip" android:text="@string/gl_dialog_tip_account_des" android:lineSpacingExtra="7.0dip" style="?gl_body_txt1" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="38.0dip" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="14.0dip" android:gravity="center" android:id="@id/tv_dialog_confirm" android:background="@drawable/gl_selector_bt_main" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/gl_confirm" android:layout_weight="1.0" style="?gl_bt_main" />
        <View android:id="@id/view_dialog_cancel_placeholder" android:layout_width="19.0dip" android:layout_height="wrap_content" />
        <TextView android:textSize="14.0dip" android:gravity="center" android:id="@id/tv_dialog_cancel" android:background="@drawable/gl_selector_bt_assistant" android:layout_width="0.0dip" android:layout_height="38.0dip" android:text="@string/dlg_binphoneclose_ok" android:layout_weight="1.0" style="?gl_bt_assistant" />
    </LinearLayout>
</RelativeLayout>
